--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <li>Adding Objects to them</li>
     <li>and Sharing them with others</li>
 </ul>
-<p> - in this Introduction to Cloud course from IBM.</b></p>
+<p> - in this "Introduction to Cloud" course from IBM.</b></p>
 
 </body>
 </html>
